--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=shopli
 
 server.port= 1234
 
-spring.datasource.url= jdbc:mysql://localhost:3306/Spring
+spring.datasource.url= jdbc:mysql://localhost:3306/shopli
 spring.datasource.username= root
 spring.datasource.password= 7590sa12
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
